--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+/* *{
+  background-image: url("https://cdn.pixabay.com/photo/2023/10/21/11/46/sunset-8331285_1280.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+} */
